--- a/larCrud/.env.example
+++ b/larCrud/.env.example
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=larcrud
+DB_DATABASE=db_name
 DB_USERNAME=root
 DB_PASSWORD=
 
